...
                    items: const [
                      BottomNavigationBarItem(
                        icon: Icon(Icons.android, key: ValueKey("bottom_navigation_item_0")),
                        label: "Base buttons",
                      ),
                      BottomNavigationBarItem(
                        icon: Icon(Icons.stadium, key: ValueKey("bottom_navigation_item_1")),
                        label: "Stadium buttons",
                      )
                    ],
                  )),
        ),
      );
...
